--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,4 @@ jobs:
       - name: Show Update Log
         shell: bash
         run: |
-          cd /home/runner/work/ && ls
+          cd /home/runner/work/data && ls
