--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,25 +17,27 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Preparing adapter repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@master
         with:
           repository: ammitto/adapters
-#      - name: Checkout submodules
-#        shell: bash
-#        run: |
-#          auth_header="$(git config --local --get http.https://github.com/.extraheader)"
-#          git submodule sync --recursive
-#          git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
-#      - name: Use Ruby
-#        uses: actions/setup-ruby@v1
-#        with:
-#          ruby-version: ${{ matrix.ruby }}
-#      - name: Update gems
-#        run: |
-#          cd adapters
-#          sudo gem install bundler --force
-#          bundle install --jobs 4 --retry 3
+          path: adapters
+      - name: Checkout submodules
+        shell: bash
+        run: |
+          auth_header="$(git config --local --get http.https://github.com/.extraheader)"
+          git submodule sync --recursive
+          git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+      - name: Use Ruby
+        uses: actions/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby }}
+      - name: Update gems
+        run: |
+          cd adapters
+          sudo gem install bundler --force
+          bundle install --jobs 4 --retry 3
       - name: Show Update Log
         shell: bash
         run: |
-          cd /home/runner/work/data && ls
+          cp -r adapters /home/runner/work/data/
+          cd /home/runner/work/data/adapters && ruby adapter.rb
