--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@master
         with:
           repository: ammitto/adapters
-          path: adapters
+          path: '../adapters'
       - name: Checkout submodules
         shell: bash
         run: |
@@ -39,7 +39,6 @@ jobs:
       - name: Show Update Log
         shell: bash
         run: |
-          cp -r adapters /home/runner/work/data/
           cd /home/runner/work/data/adapters && ruby adapter.rb
       - name: Show Update Log
         shell: bash
