Automatically Updated Data Sources

--- a/processed/world_bank_sanctions_list.yaml
+++ b/processed/world_bank_sanctions_list.yaml
@@ -1,97 +1,5 @@
 ---
 - names:
-  - SOCIÉTÉ GRANDS TRAVAUX MGHAIETH (GTM)
-  country: Tunisia
-  source: world_bank_sanctions_list
-  ref_number: 323167
-  ref_type: World Bank SUPP ID
-  remark: Proc. Guidelines, 1.14(a)(ii); Proc. Guidelines, 1.15(a)(ii)
-  address:
-  - street: 21, KEMAL ATATURK STREET
-    city: TUNIS 1001
-    state: 
-    country: Tunisia
-    zip: 
-- names:
-  - JIANGSU ZHONGTIAN TECHNOLOGY CO., LTD.
-  country: China
-  source: world_bank_sanctions_list
-  ref_number: 421709
-  ref_type: World Bank SUPP ID
-  remark: Procurement Guidelines, 1.16(a)(ii)
-  address:
-  - street: JIANGSU ZHONGTIAN TECHNOLOGY CO., LTD, NO. 5, ZHONGTIAN ROAD, NANTONG
-      ECONOMIC AND TECHNICAL DEVELOPMENT ZONE
-    city: JIANGSU PROVINCE
-    state: 
-    country: China
-    zip: 
-- names:
-  - ZTT INTERNATIONAL LIMITED
-  country: China
-  source: world_bank_sanctions_list
-  ref_number: 421721
-  ref_type: World Bank SUPP ID
-  remark: Controlled Affiliate of a Sanctioned Entity.
-  address:
-  - street: NO. 88 QIXIN ROAD, NANTONG ECONOMIC AND TECHNICAL DEVELOPMENT AREA
-    city: JIANGSU PROVINCE
-    state: 
-    country: China
-    zip: 
-- names:
-  - CODEF & ALQUILER DE MAQUINARIA
-  country: Bolivia
-  source: world_bank_sanctions_list
-  ref_number: 371992
-  ref_type: World Bank SUPP ID
-  remark: 'Cross-Debarment: IDB'
-  address:
-  - street: 'AV. FRANCISCO MORA 2401, ZONA: B/ PETROLERO SUR'
-    city: SANTA CRUZ
-    state: 
-    country: Bolivia
-    zip: 
-- names:
-  - FABIOLA POZO DORADO
-  country: Bolivia
-  source: world_bank_sanctions_list
-  ref_number: 371993
-  ref_type: World Bank SUPP ID
-  remark: 'Cross-Debarment: IDB'
-  address:
-  - street: 'AV. FRANCISCO MORA 2401, ZONA: B/ PETROLERO SUR'
-    city: SANTA CRUZ
-    state: 
-    country: Bolivia
-    zip: 
-- names:
-  - BEST SCAN SOLUTIONS LIMITED
-  country: Nigeria
-  source: world_bank_sanctions_list
-  ref_number: 329180
-  ref_type: World Bank SUPP ID
-  remark: Consultant Guidelines, 1.22(a)(i)
-  address:
-  - street: 10 OBANLE ARO AVENUE, OFF COKER ROAD, ILUPEJU
-    city: LAGOS
-    state: 
-    country: Nigeria
-    zip: 
-- names:
-  - MR. IYKE AMBROSE
-  country: Nigeria
-  source: world_bank_sanctions_list
-  ref_number: 329186
-  ref_type: World Bank SUPP ID
-  remark: Consultant Guidelines, 1.22(a)(i)
-  address:
-  - street: 10 OBANLE ARO AVENUE, OFF COKER ROAD, ILUPEJU
-    city: LAGOS
-    state: 
-    country: Nigeria
-    zip: 
-- names:
   - LATIFI CONSTRUCTION AND ROAD CONSTRUCTION COMPANY
   country: Afghanistan
   source: world_bank_sanctions_list
@@ -15240,6 +15148,19 @@
     country: Bangladesh
     zip: 
 - names:
+  - SOCIÉTÉ GRANDS TRAVAUX MGHAIETH (GTM)
+  country: Tunisia
+  source: world_bank_sanctions_list
+  ref_number: 323167
+  ref_type: World Bank SUPP ID
+  remark: Proc. Guidelines, 1.14(a)(ii); Proc. Guidelines, 1.15(a)(ii)
+  address:
+  - street: 21, KEMAL ATATURK STREET
+    city: TUNIS 1001
+    state: 
+    country: Tunisia
+    zip: 
+- names:
   - SAN ISIDRO-L S.R.L.
   country: Peru
   source: world_bank_sanctions_list
@@ -15543,6 +15464,19 @@
     country: China
     zip: 
 - names:
+  - OREGON PACIFIC INTERNATIONAL CO. LTD.
+  country: Tonga
+  source: world_bank_sanctions_list
+  ref_number: 326548
+  ref_type: World Bank SUPP ID
+  remark: Procurement Guidelines, 1.16(a)(ii)
+  address:
+  - street: SMALL INDUSTRIES CENTRE 102, MA’UFANGA
+    city: NUKU’ALOFA
+    state: 
+    country: Tonga
+    zip: 
+- names:
   - MR. PEDRO CESAR LAZO MONTEJO
   country: Peru
   source: world_bank_sanctions_list
@@ -15686,6 +15620,32 @@
     city: JUNIN
     state: 
     country: Peru
+    zip: 
+- names:
+  - BEST SCAN SOLUTIONS LIMITED
+  country: Nigeria
+  source: world_bank_sanctions_list
+  ref_number: 329180
+  ref_type: World Bank SUPP ID
+  remark: Consultant Guidelines, 1.22(a)(i)
+  address:
+  - street: 10 OBANLE ARO AVENUE, OFF COKER ROAD, ILUPEJU
+    city: LAGOS
+    state: 
+    country: Nigeria
+    zip: 
+- names:
+  - MR. IYKE AMBROSE
+  country: Nigeria
+  source: world_bank_sanctions_list
+  ref_number: 329186
+  ref_type: World Bank SUPP ID
+  remark: Consultant Guidelines, 1.22(a)(i)
+  address:
+  - street: 10 OBANLE ARO AVENUE, OFF COKER ROAD, ILUPEJU
+    city: LAGOS
+    state: 
+    country: Nigeria
     zip: 
 - names:
   - SUNAULA KHIMTI PVT. CONSTRUCTION LTD.
