--- a/processed/un_sanctions_list.yaml
+++ b/processed/un_sanctions_list.yaml
@@ -21556,9 +21556,10 @@
   ref_type: Al-Qaida
   country: 
   birthdate: 
-  remark: |-
-    Review pursuant to Security Council resolution 1822 (2008) was concluded
-    on 25 May 2010. INTERPOL-UN Security Council Special Notice web link: https://www.interpol.int/en/How-we-work/Notices/View-UN-Notices-Entities
+  remark: "Review pursuant to Security Council resolution 1822 (2008) was concluded\non
+    25 May 2010. \nReview pursuant to Security Council resolution 2368 (2017) was
+    concluded on 24 November 2020.\n\n INTERPOL-UN Security Council Special Notice
+    web link: https://www.interpol.int/en/How-we-work/Notices/View-UN-Notices-Entities"
   address:
   - street: 
     city: 
@@ -24072,7 +24073,7 @@
   remark: |-
     Operates in Southeast Asia, including Indonesia, Malaysia and the
     Philippines. Associated with the Abu Sayyaf Group (QDe.001). Review pursuant to Security
-    Council resolution 1822 (2008) was concluded on 25 May 2010. INTERPOL-UN Security Council Special Notice web link: https://www.interpol.int/en/How-we-work/Notices/View-UN-Notices-Entities
+    Council resolution 1822 (2008) was concluded on 25 May 2010. Review pursuant to Security Council resolution 2368 (2017) was concluded on 24 November 2020. INTERPOL-UN Security Council Special Notice web link: https://www.interpol.int/en/How-we-work/Notices/View-UN-Notices-Entities
   address:
   - street: 
     city: 
