--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,41 +15,10 @@ jobs:
       matrix:
         ruby: [ '2.6' ]
     steps:
-      - uses: actions/checkout@master
-      - name: Preparing adapter repo
-        uses: actions/checkout@master
-        with:
-          repository: ammitto/adapters
-          path: adapters
-      - name: Checkout submodules
-        shell: bash
-        run: |
-          auth_header="$(git config --local --get http.https://github.com/.extraheader)"
-          git submodule sync --recursive
-          git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
-      - name: Use Ruby
-        uses: actions/setup-ruby@v1
-        with:
-          ruby-version: ${{ matrix.ruby }}
-      - name: Update gems
-        run: |
-          cd adapters
-          sudo gem install bundler --force
-          bundle install --jobs 4 --retry 3
       - name: Show Update Log
         shell: bash
         run: |
-          mv adapters /home/runner/work/data/
-          cd /home/runner/work/data/adapters && ruby adapter.rb
-          rm -rf /home/runner/work/data/adapters
-      - name: Show Update Log
-        shell: bash
-        run: |
-          cat update.log
-      - name: Commit changes
-        uses: EndBug/add-and-commit@v7
-        with:
-          author_name: Bilash Saha
-          author_email: bilashsaha03@gmail.com
-          message: 'Automatically Updated Data Sources'
-          add: '.'
+          echo $GITHUB_WORKSPACE
+
+
+
