github scheduler to run the adapter and update data everyday

--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,10 +1,10 @@
-name: Update Data in every 4 hours
+name: Update Data Everyday
 
 on:
   push:
   pull_request:
   schedule:
-    - cron: '0 */4 * * *'
+    - cron: '0 0 * * *'
 
 jobs:
   update-data:
